[gd_scene load_steps=3 format=3 uid="uid://dw0a0adakonek"]

[ext_resource type="Script" uid="uid://c43mxbw0b4817" path="res://views/player_hud/action_button/action_button.gd" id="1_b2dwe"]
[ext_resource type="PackedScene" uid="uid://crhd1dqsv6w31" path="res://views/tooltip_pane/tooltip_pane.tscn" id="2_e5ap7"]

[node name="ActionButton" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_b2dwe")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 80.0
offset_bottom = 80.0

[node name="HotkeyLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -26.0
offset_right = 44.0
offset_bottom = -3.0
grow_vertical = 0
text = "X"

[node name="Count" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -44.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = 27.0
grow_horizontal = 0
text = "0"
horizontal_alignment = 2

[node name="AnimationTimer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0

[node name="TooltipPane" parent="CanvasLayer/Control" instance=ExtResource("2_e5ap7")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="mouse_entered" from="Panel" to="." method="_on_panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_panel_mouse_exited"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timer_timeout"]
